--- a/config.yml
+++ b/config.yml
@@ -1,12 +1,18 @@
 test:
-  field1: here
-  field2: there
+    field1: here
+    field2: there
 twilio:
-  phone_number: 1234
+    phone_number: 1234
 ticketmaster:
-  base_url: https://app.ticketmaster.com
-  api_key: OSrIAJMbQfu3K3tfo6TB4e1xtW3coOY2
+    base_url: https://app.ticketmaster.com
+    api_key: OSrIAJMbQfu3K3tfo6TB4e1xtW3coOY2
 mongo:
-  host: localhost
-  port: 27017
-  database: sparrow
+    host: localhost
+    port: 27017
+    database: sparrow
+postgres:
+    host: localhost
+    port: 5433
+    database: postgres
+    user: postgres
+    password: password
